coolify/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: coolify
subsets:
- addresses:
  - ip: 192.168.1.63
  ports:
  - name: coolify
    port: 8000
    protocol: TCP
