coolify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coolify
  annotations:
    external-dns.alpha.kubernetes.io/hostname: coolify.rossreicks.com
    external-dns.alpha.kubernetes.io/target: home.rossreicks.com
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - coolify.rossreicks.com
    secretName: wildcard-cert-prod-tls
  rules:
    - host: coolify.rossreicks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coolify
                port:
                  number: 80
